<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favourite_page"
        android:title="@string/favorites"
        android:icon="@drawable/baseline_favorite_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mode_page"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>